[package]
name = "advent22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
clap = { version = "4.4.6", features = ["derive"]}
num = "0.4.0"
queues = "1.1.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true

[[bench]]
name = "d19"
harness = false
